--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@react-google-maps/api": "^2.20.5",
     "next": "15.1.3",
     "next-auth": "^4.24.11",
     "react": "^19.0.0",
